--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".GreetingActivity"
+            android:label="@string/title_activity_greeting"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
